compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__panic__bare.snap
---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\npub fn go() {\n  panic\n}\n"
---
----- SOURCE CODE

pub fn go() {
  panic
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go() {
  throw makeError(
    "panic",
    FILEPATH,
    "my/mod",
    3,
    "go",
    "`panic` expression evaluated.",
    {}
  )
}
