compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__panic__bare_typescript.snap
---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\npub fn go() {\n  panic\n}\n"
---
----- SOURCE CODE

pub fn go() {
  panic
}


----- TYPESCRIPT DEFINITIONS
export function go(): any;
