compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__panic__pipe.snap
---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\npub fn go(f) {\n  f |> panic\n}\n"
---
----- SOURCE CODE

pub fn go(f) {
  f |> panic
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(f) {
  let _pipe = f;
  let _block;
  throw makeError(
    "panic",
    FILEPATH,
    "my/mod",
    3,
    "go",
    "`panic` expression evaluated.",
    {}
  )
  return _block(_pipe);
}
