compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__panic__sequence.snap
---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\npub fn go(at_the_disco) {\n  panic\n  at_the_disco\n}\n"
---
----- SOURCE CODE

pub fn go(at_the_disco) {
  panic
  at_the_disco
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(at_the_disco) {
  throw makeError(
    "panic",
    FILEPATH,
    "my/mod",
    3,
    "go",
    "`panic` expression evaluated.",
    {}
  )
  return at_the_disco;
}
